fix: :art: navbar is now responsive, also added another icons library
I've fixed the navbar to be responsive, if you're reading this, it means that you're either merging from another branch or just checking my branch, either way, feedback is greatly appreciated, if anything looks wrong, hit me up. I've also added the react-icons library, it contains a vast amount of icons, way more than chakra icons, and you can use them as chakra icons too

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,17 +3,12 @@
 @tailwind utilities;
 
 :root {
-<<<<<<< HEAD
-    --text-primary: #E4E4E4;
-    --background-primary: #121212;
+    --text-primary: #fafafa;
+    --background-primary: #0a0a0a;
   }
 
 body {
   background-image: url('../../assets/icons/background.svg');
   background-size: cover;
   background-repeat: no-repeat;
-=======
-  --text-primary: #E4E4E4;
-  --background-primary: #121212;
->>>>>>> origin/staging
 }
